--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
   <header class="w3-container w3-padding-32 w3-center w3-black" id="home">
     <h1 class="w3-jumbo"><span class="w3-hide-small">I'm</span> Abdurrohman</h1>
     <p>IT AND NETWOKING</p>
-    <img src="https://github.com/abdurrohman9/oprek_networking/commit/abf49aed1fe08f4343a394b772025e15f02e35d5" alt="PHOTO.jpeg" class="w3-image" width="992" height="1108">
+    <img src="panda.png" class="w3-image" width="992" height="1108">
   </header>
 
   <!-- About Section -->
