--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
   <header class="w3-container w3-padding-32 w3-center w3-black" id="home">
     <h1 class="w3-jumbo"><span class="w3-hide-small">I'm</span> Abdurrohman</h1>
     <p>IT AND NETWOKING</p>
-    <img src="panda.png" width="420" height="400">
+    <img src="PHOTO.jpeg" width="420" height="400">
   </header>
 
   <!-- About Section -->
