--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
   <div class="w3-content w3-justify w3-text-grey w3-padding-64" id="about">
     <h2 class="w3-text-light-grey">My Name</h2>
     <hr style="width:200px" class="w3-opacity">
-    <p>I love the world of computer networks, starting from an internship at an ISP company, now working at an ISP company (Melsa Internet). love challenges and can adapt to the environment. love new things, able to work with teams and individuals. flexible, friendly and analyzer.
+    <p>you can call me Rohman, I love the world of computer networks, starting from an internship at an ISP company, now working at an ISP company. love challenges and can adapt to the environment. love new things, able to work with teams and individuals. flexible, friendly and analyzer.
     </p>
     <h3 class="w3-padding-16 w3-text-light-grey">My Skills</h3>
     <p class="w3-wide">Network Computer</p>
